// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionConfirmations should render when confirmed 1`] = `
<div>
  <div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 Lofxx"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Confirmations
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex space-x-3"
          >
            <span>
              Well confirmed
            </span>
            <span>
              <div
                class="sc-gsTCUz gbSRoN text-theme-success"
                height="22"
                width="22"
              >
                <svg>
                  status-ok.svg
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionConfirmations should render when not confirmed 1`] = `
<div>
  <div>
    <div
      class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 Lofxx"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Confirmations
        </div>
        <div
          class="font-semibold"
        >
          <div
            class="flex space-x-3"
          >
            <span>
              Not confirmed
            </span>
            <div
              class="sc-gsTCUz gbSRoN text-theme-warning"
              height="22"
              width="22"
            >
              <svg>
                status-pending.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
